--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Michael Mera's Developing Services </title>
+  <link rel="preconnect" href="https://font.googleleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+href="https://fonts.googleleapis.com/css2?family=Josefin+Sans&family=Playpen+Sans&display=swap" rel="sytelsheet">
+<link rel="stylesheet" href="CSS/style.css">
+
 </head>
+
 <body>
   
+  <header>
+    <img src="Arnold.png" alt="Hey Arnold Logo.png">
+    <h1> Arnold's WDS </h1>
+  </header>
 </body>
 </html>
