--- a/index.html
+++ b/index.html
@@ -104,5 +104,11 @@ href="https://fonts.googleleapis.com/css2?family=Josefin+Sans&family=Playpen+San
           </article>
       </div>
   </main>
+
+  <footer>
+
+    ©2023- Arnold Phillip Shortman
+  </footer>
+
 </body>
 </html>
